CSS backface visibility fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -173,6 +173,7 @@ header nav {
 
     .blur {
       height: 100%;
+      -webkit-backface-visibility: hidden;
     }
     
     img {
